# Thesis-Project

./: README.md  my_map2_save.yaml  my_map_save.pgm  my_map_save.yaml  my_map_serial.data  my_map_serial.posegraph
Object detection/: convert.py  yoloPretrained.py  yoloTransfer.py
Object detection/datasets/Car-Detection-2/: README.dataset.txt  README.roboflow.txt  data.yaml
Object detection/datasets/Car-Detection-2/test/labels/: 000000000260_jpg.rf.18ad4cd8dfb781f33597004ab181f1ac.txt  000000001523_jpg.rf.cde3bd8ab8c6baa49d983beaee17b355.txt  000000002754_jpg.rf.0db0db9c645580430b2bc01f511b80f6.txt  000000002985_jpg.rf.cd39bdfd9ee74b9958b80fe267372194.txt  (+824 more)
Object detection/datasets/Car-Detection-2/valid/: labels.cache
Object detection/runs/detect/train/: args.yaml  results.csv
Object detection/runs/detect/train4/: args.yaml  results.csv
install/pi_camera/lib/pi_camera/: publish_compressed
install/pi_camera/share/pi_camera/: package.bash  package.sh
install/slam_ultrasonic/lib/slam_ultrasonic/: obstacle_avoidance_node.py
install/slam_ultrasonic/share/slam_ultrasonic/: local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
install/yolo/share/yolo/: local_setup.sh  package.sh
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/my_robot/: CMakeLists.txt
src/my_robot/bringup/launch/: my_robot.launch.py
src/my_robot/description/urdf/: common_properties.xacro  ultrasonic.xacro
src/slam_ultrasonic/: CMakeLists.txt  package.xml
src/slam_ultrasonic/src/: ultrasonic_node.py
src/yolo/: CMakeLists.txt  package.xml
(+7221 files in other folders)
